kubernetes/apps/mediaserver/overseerr/resources/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-ingress
      sectionName: https-external
  hostnames:
    - requests.mcf.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: overseerr
          port: 5055
